Fix horizontal scroll

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,11 +2,10 @@
 @import '~material-icons/iconfont/material-icons.css';
 
 .app-container {
-    margin-top: -8px;
+    margin: -8px;
     height: 100%;
 }
 
 html, body {
     height: 100%;
-    width: 100%;
 }
